--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8">
   <title>South Park Tribute Page</title>
-  
-  
+
+
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css'>
 
       <link rel="stylesheet" href="css/style.css">
 
-  
+
 </head>
 
 <body>
@@ -23,97 +23,43 @@
     <!--SouthPark Logo-->
     <div class="col-md-4">
       <div class="southparkbox">
-          <img class="img-responsive" src="https://raw.githubusercontent.com/Marbocatcat/Tribute_Page/master/assets/SouthParkLogo.png">
+          <img class="img-responsive" src="images\SouthParkLogo.png">
       </div>
     </div>
-    <!--cartman photo-->
-    <div class="col-md-4">
+    <!--Towelie photo-->
+    <div class="col-md-6">
         <div class="card">
           <div class="card-img">
-            <img class="img-responsive" src="https://raw.githubusercontent.com/Marbocatcat/Tribute_Page/master/assets/cartman.gif">
+            <img class="img-responsive" src="images\towelie.gif">
           </div>
-          <h3> Eric Cartman </h3>
+          <center>
+          <h3> Societal Demise </h3>
           <div class="card-content">
-            <p>AKA <strong>"The Coon"</strong>, Out of every resident in the small mountain town of South Park, Colorado, the most well-known is probably Eric Theodore Cartman... </p>
-          </div>
-          <div class="card-actions">
-            <a href="http://wiki.southpark.cc.com/wiki/Eric_Cartman" target="_blank">Read more</a>
+            <p>We're an <strong>active</strong>, South Park Phone Destroyer group.<br><br>Please make sure to join our Discord:
+              <br><a href="https://discordapp.com/invite/hCSRbxw"><img class="img-responsive" src="images\discord.png"></a></p>
+          </center>
           </div>
         </div>
       </div>
-     <!--kyle photo-->
-    <div class="col-md-4">
-        <div class="card">
-          <div class="card-img">
-            <img class="img-responsive" src="https://raw.githubusercontent.com/Marbocatcat/Tribute_Page/master/assets/kyle.gif">
-          </div>
-          <h3> Kyle Broflovski </h3>
-          <div class="card-content">
-            <p>AKA <strong>"High Jew Elf King"</strong>, has always been considered one of the most intelligent children in South Park, and whenever crazy things... </p>
-          </div>
-          <div class="card-actions">
-            <a href="http://wiki.southpark.cc.com/wiki/Kyle_Broflovski" target="_blank">Read more</a>
-          </div>
+
+  <!--Extra Useless Row
+      <div class="row">
+        <div class="col-md-4">
         </div>
-      </div>
-    <!--2nd -->
-     <!--Stan photo-->
-     <div class="col-md-4">
-         <div class="card">
-           <div class="card-img">
-             <img class="img-responsive" src="https://raw.githubusercontent.com/Marbocatcat/Tribute_Page/master/assets/butters.gif">
-           </div>
-           <h3> Butter Stotch</h3>
-           <div class="card-content">
-             <p>AKA <strong>"Marjorine" </strong>, Butters is the boys' innocent little classmate. He is by far the most naive and well-natured of the 4th graders... </p>
-           </div>
-           <div class="card-actions">
-             <a href="http://wiki.southpark.cc.com/wiki/Butters_Stotch" target="_blank">Read more</a>
-           </div>
-         </div>
-       </div>
-    <div class="col-md-4">
-        <div class="card">
-          <div class="card-img">
-            <img class="img-responsive" src="https://raw.githubusercontent.com/Marbocatcat/Tribute_Page/master/assets/stan.gif">
-          </div>
-          <h3> Stan Marsh </h3>
-          <div class="card-content">
-            <p>AKA <strong>"Ranger Stan Marshwalker" </strong>, has always been your comparatively average all-American fourth grader...  </p>
-          </div>
-          <div class="card-actions">
-            <a href="http://wiki.southpark.cc.com/wiki/Stan_Marsh" target="_blank">Read more</a>
-          </div>
-        </div>
-      </div>
-     <!--cartman photo-->
-    <div class="col-md-4">
-        <div class="card">
-          <div class="card-img">
-            <img class="img-responsive" src="https://raw.githubusercontent.com/Marbocatcat/Tribute_Page/master/assets/kenny.gif">
-          </div>
-          <h3> Kenny McCormick </h3>
-          <div class="card-content">
-            <p>AKA <strong>"Mysterion"</strong>, is the poor and perverted kid in the group, often eating canned food and frozen waffles for dinner... </p>
-          </div>
-          <div class="card-actions">
-            <a href="http://wiki.southpark.cc.com/wiki/Kenny_McCormick" target="_blank">Read more</a>
-          </div>
-        </div>
-      </div>
+      </div> -->
+
 
     </div>
   </div>
 </div>
 <footer>
-  <div class="container text-center">
-    <a href="https://github.com/Marbocatcat" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>
- MAR </a>
+  <div class="text-center">
+    <a href="https://bit.ly/FREEFREEFREEFREE" target="_blank"><i class="fa fa-usd" aria-hidden="true"></i> <small>FREE MONEY!</small> <i class="fa fa-usd" aria-hidden="true"></i></a>
   </div>
 </footer>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
 
-  
+
 
 </body>
 
