--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 </script>
   <meta charset="UTF-8">
   <title>Societal Demise - South Park Phone Destroyer Group</title>
-
+  
+<meta name="description" content="Societal Demise - We're an active, South Park Phone Destroyer group, and we have a Discord!">
+<meta name="keywords" content="southparkphonedestroyer,south park,phone destroyer,sppd,southpark,game,southparkphonedestroyergame,southparkgame,south park game,southparkmemes,southparkmobile,south park mobile,mobile gamers,south park memes,twitch,streamer,mobilegamers,discord">
 
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css'>
