--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 <meta name="description" content="Societal Demise - We're an active, South Park Phone Destroyer group, and we have a Discord!">
 <meta name="keywords" content="southparkphonedestroyer,south park,phone destroyer,sppd,southpark,game,southparkphonedestroyergame,southparkgame,south park game,southparkmemes,southparkmobile,south park mobile,mobile gamers,south park memes,twitch,streamer,mobilegamers,discord">
 
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
+      <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+      <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css'>
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css'>
 
       <link rel="stylesheet" href="css/style.css">
