--- a/index.html
+++ b/index.html
@@ -14,9 +14,15 @@
   <meta charset="UTF-8">
   <title>Societal Demise - South Park Phone Destroyer Group</title>
   
-<meta name="description" content="Societal Demise - We're an active, South Park Phone Destroyer group, and we have a Discord!">
-<meta name="keywords" content="southparkphonedestroyer,south park,phone destroyer,sppd,southpark,game,southparkphonedestroyergame,southparkgame,south park game,southparkmemes,southparkmobile,south park mobile,mobile gamers,south park memes,twitch,streamer,mobilegamers,discord">
+      <meta name="description" content="Societal Demise - We're an active, South Park Phone Destroyer group, and we have a Discord!">
+      <meta name="keywords" content="southparkphonedestroyer,south park,phone destroyer,sppd,southpark,game,southparkphonedestroyergame,southparkgame,south park game,southparkmemes,southparkmobile,south park mobile,mobile gamers,south park memes,twitch,streamer,mobilegamers,discord">
+      <meta property="og:image" content="http://sdsppd.tk/images/sd-sppd-logo-2.png">
+      <meta property="og:image:type" content="image/png">
+      <meta property="og:image:width" content="875">
+      <meta property="og:image:height" content="875">
 
+  
+  
       <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
       <link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
 
