--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!--SouthPark Logo-->
     <div class="col-md-4">
       <div class="southparkbox">
-          <img class="img-responsive" src="images\SouthParkLogo.png">
+          <img class="img-responsive" src="images\sd-sppd-logo-2.png">
       </div>
     </div>
     <!--Towelie photo-->
