--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
   <script src="https://use.fontawesome.com/b801c5f6ca.js"></script>
 
 <div class="container">
+   <img class="img-responsive" src="images\sd-sppd-logo-2.png">
   <div class="row">
     <!--SouthPark Logo-->
     <div class="col-md-4">
