--- a/index.html
+++ b/index.html
@@ -44,10 +44,9 @@
     <!--SouthPark Logo-->
     <div class="col-md-4">
       <div class="southparkbox">
-          <img class="img-responsive" src="images\sd-sppd-logo-2.png">
+          <img class="img-responsive" src="images\sd-sppd-logo-2.png" width="500">
       </div>
     </div>
-           <img class="img-responsive" src="images\sd-sppd-logo-2.png">
     <!--Towelie photo-->
     <div class="col-md-6">
         <div class="card">
