--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <h3> Societal Demise </h3>
           <div class="card-content">
             <p>We're an <strong>active</strong>, South Park Phone Destroyer group.<br><br>Please make sure to join our Discord:
-              <br><a href="https://discordapp.com/invite/hCSRbxw"><img class="img-responsive" src="images\discord-1.png"></a></p>
+              <br><a href="https://discordapp.com/invite/hCSRbxw"><img class="img-responsive" src="images\Discord-1.png"></a></p>
           </center>
           </div>
         </div>
