--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!--SouthPark Logo-->
     <div class="col-md-4">
       <div class="southparkbox">
-          <img class="img-responsive" src="images\sd-sppd-logo-2.png" width="800">
+          <img class="img-responsive" src="images\sd-sppd-logo-2.png">
       </div>
     </div>
     <!--Towelie photo-->
