--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 </div>
 <footer>
   <div class="text-center">
-    <a href="https://bit.ly/FREEFREEFREEFREE" target="_blank"><i class="fa fa-usd" aria-hidden="true"></i> <small>FREE MONEY!</small> <i class="fa fa-usd" aria-hidden="true"></i></a>
+    <a href="https://towelietrades.tk" target="_blank"><i class="fa fa-usd" aria-hidden="true"></i> <small>FREE MONEY!</small> <i class="fa fa-usd" aria-hidden="true"></i></a>
   </div>
 </footer>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
